--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="logo">
             <a href="index.html">
-                <img src="img/SS-Logos-Blue-png.png" alt="" width="185"> 
+                <img src="img/ss-logos-blue-png.png" alt="" width="185"> 
             </a>
 
         </div>
